fixed navbar font side and ites align property

--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ body {
 	top: 0;
 	width: 100%;
 	background-color: #111;
-	background-image: url('background.jpg');
+	background-image: rgb(12, 12, 12);
 	z-index: 1;
+	align-items: center;
 	/* line-height: 20px; */
 }
 
@@ -34,6 +35,7 @@ body {
 	padding: 8px 35px;
 	align-items: center;
 	margin: auto;
+	cursor: pointer;
 }
 
 .logo span {
@@ -42,22 +44,29 @@ body {
 .navlist {
 	display: flex;
 	text-align: center;
+	align-items: center;
 	margin: auto;
 	/* width: 70%; */
 }
 .navlist li {
 	list-style: none;
-	padding: 8px 35px;
+	/* padding: 8px 35px; */
 }
+
+.navlist li:not(:last-child) {
+	margin-right: 2.3rem;
+}
+
 .navlist li a {
 	text-decoration: none;
 	color: #f7f3e9;
-	font-size: 20px;
+	font-size: 18px;
 }
 .navlist li a:hover {
 	text-decoration: none;
 	color: brown;
-	font-size: 20px;
+	transition: all;
+	transition-duration: 300ms;
 }
 .background {
 	background-image: url('background.jpg');
@@ -105,7 +114,7 @@ body {
 /* ------------about----------- */
 .about {
 	padding: 50px 10px;
-	background-color:black;
+	background-color: black;
 }
 .about .container h1 {
 	text-transform: uppercase;
@@ -371,10 +380,10 @@ footer .bottom a:hover {
 
 @media (max-width: 800px) {
 	.flex-container {
-	  flex-direction: column;
-	  margin-left: 50px;
+		flex-direction: column;
+		margin-left: 50px;
 	}
-  }
+}
 
 .flex-container {
 	display: flex;
@@ -384,13 +393,19 @@ footer .bottom a:hover {
 	padding-top: 20px;
 }
 
-.linkbottom{
-	margin: 0 0 30px 0; }
+.linkbottom {
+	margin: 0 0 30px 0;
+}
 
-a.linkbottom:link {color:white}
-a.linkbottom:visited {color: white;}
-a.linkbottom:hover {color:red}
-
+a.linkbottom:link {
+	color: white;
+}
+a.linkbottom:visited {
+	color: white;
+}
+a.linkbottom:hover {
+	color: red;
+}
 
 /* -------------making website responsive------------ */
 @media only screen and (max-width: 1074px) {
